quickly push by script

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>learn-vue</title>
 </head>
 
-<body>
+<body style="margin: 0px">
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
